--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
   ## Not needed for static site generators.
   #[[redirects]]
   #  from = "/*"
-  #  to = "/index.js"
+  #  to = "/index.jsx"
   #  status = 200
 
   ## (optional) Settings for Netlify Dev
