--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "formik": "^2.2.9",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
+    "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-saga": "^0.3.1",
     "react-scripts": "5.0.1",
