--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "build": "webpack --mode development",
     "build:prod": "webpack --mode production",
     "deploy:prod": "netlify deploy --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN --prod",
-    "dev": "concurrently \"npm run deploy:dev\" \"node app.js\""
+    "dev": "concurrently \"npm run deploy:dev\" \"node app.js\"",
+    "netlify" : "concurrently \"npm run build:prod\" \"node app.js\"" 
   },
   "eslintConfig": {
     "extends": [
