--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 # example netlify.toml
 [build]
-  command = "npm run netlify"
+  command = "npm run build:prod"
   functions = "netlify/functions"
   publish = "dist"
 
