--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "start": "react-scripts start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy:dev": "concurrently \"webpack-dev-server --mode development --hot --open --static\" \"node app.js\"",
+    "deploy:dev": "webpack-dev-server --mode development --hot --open --static",
     "docs:build": "documentation build src/** -f html -o docs",
     "build": "webpack --mode development",
     "build:prod": "webpack --mode production",
