--- a/package.json
+++ b/package.json
@@ -3,24 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@azure/identity": "^3.1.3",
+    "@azure/storage-blob": "^12.13.0",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.12",
     "@netlify/planetscale": "^1.0.0",
     "@planetscale/database": "^1.5.0",
+    "@popperjs/core": "^2.11.6",
     "@tabler/icons-react": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
+    "azure-storage": "^2.10.7",
     "babel-install": "^2.1.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
     "history": "^5.3.0",
+    "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.2",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
@@ -29,6 +40,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
+    "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
