--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
+    "typed.js": "^2.0.14",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
