--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-router-dom": "^6.8.1",
     "react-saga": "^0.3.1",
     "react-scripts": "5.0.1",
+    "react-window": "^1.8.8",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
     "typed.js": "^2.0.14",
