--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "proyecto",
   "version": "0.1.0",
   "private": true,
+  "proxi": "http://localhost:3000",
   "dependencies": {
     "@azure/identity": "^3.1.3",
     "@azure/storage-blob": "^12.13.0",
@@ -27,6 +28,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
     "history": "^5.3.0",
+    "http-proxy-middleware": "^2.0.6",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
