--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.3",
     "buffer": "^6.0.3",
+    "cleave.js": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "formik": "^2.2.9",
@@ -35,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.2",
+    "react-number-format": "^5.1.4",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
