--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "atropos": "^1.0.2",
     "axios": "^1.3.3",
     "azure-storage": "^2.10.7",
     "babel-install": "^2.1.0",
@@ -37,11 +38,13 @@
     "react-dropzone": "^14.2.3",
     "react-intersection-observer": "^9.4.2",
     "react-number-format": "^5.1.4",
+    "react-plx": "^2.1.2",
     "react-redux": "^8.0.5",
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-saga": "^0.3.1",
     "react-scripts": "5.0.1",
+    "react-scroll-parallax": "^3.4.2",
     "react-window": "^1.8.8",
     "redux": "^4.2.1",
     "styled-components": "^5.3.6",
