--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "dependencies": {
     "@azure/identity": "^3.1.3",
     "@azure/storage-blob": "^12.13.0",
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.11",
+    "@mui/joy": "^5.0.0-beta.1",
     "@mui/material": "^5.11.12",
     "@netlify/planetscale": "^1.0.0",
     "@planetscale/database": "^1.5.0",
