--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxi": "https://portafoliogvss.netlify.app/",
   "dependencies": {
+    "@apollo/client": "^3.8.3",
     "@azure/identity": "^3.1.3",
     "@azure/storage-blob": "^12.13.0",
     "@emotion/react": "^11.11.1",
@@ -14,6 +15,7 @@
     "@netlify/planetscale": "^1.0.0",
     "@planetscale/database": "^1.5.0",
     "@popperjs/core": "^2.11.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -30,6 +32,7 @@
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
+    "graphql": "^16.8.0",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "multer": "^1.4.5-lts.1",
