--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxi": "https://portafoliogvss.netlify.app/",
   "dependencies": {
+    "@apollo/client": "^3.8.3",
     "@azure/identity": "^3.1.3",
     "@azure/storage-blob": "^12.13.0",
     "@emotion/react": "^11.11.1",
@@ -30,6 +31,7 @@
     "express": "^4.18.2",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
+    "graphql": "^16.8.0",
     "history": "^5.3.0",
     "http-proxy-middleware": "^2.0.6",
     "multer": "^1.4.5-lts.1",
