--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@netlify/planetscale": "^1.0.0",
     "@planetscale/database": "^1.5.0",
     "@popperjs/core": "^2.11.6",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
