--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "atropos": "^1.0.2",
     "axios": "^1.3.3",
     "azure-storage": "^2.10.7",
@@ -107,6 +109,7 @@
     "sass-loader": "^13.2.0",
     "source-map-loader": "^4.0.1",
     "standardx": "^3.0.0",
+    "typescript": "^4.1.6",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
